# auto-mate

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
fenrir/: __init__.py  authentication.py  config.py  core_page.py  helpers.py  page_scraper.py  product_page.py  zap_spider.py
sites/indeed/: home_page.py
stuff/: __init__.py  authentication.py  helpers.py
tests/: conftest.py  test_auth_on_public_site.py
tests/indeed/: conftest.py  test_auth_on_public_site.py
